--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div id="leftBox">
         <div class="text-flex">
           <textarea id="noteText" placeholder="Write a text here"></textarea>
-          <div>
+          <div class="colors">
             <div class="color-head">
               <input type="color" class="picker" id="bgColor" />
               <h3>Bg Color</h3>
@@ -51,7 +51,6 @@
       </div>
     </div>
 
-    <!-- <div class="output"></div> -->
 
     <script src="script.js"></script>
   </body>
